Added a the start of a basic MVC framework

--- a/src/JakobHendrixCore/JakobHendrixCore/Views/Home/Index.cshtml
+++ b/src/JakobHendrixCore/JakobHendrixCore/Views/Home/Index.cshtml
@@ -1,15 +1,21 @@
+﻿
+@{
+    Layout = null;
+}
+
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Root</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Good day, from me to thee</h1>
+    <h1>Welcome to my home on the web.</h1>
     <p>
-        <blockquote>This will be something nifty pretty soon, one hopes...</blockquote><em>Jakob - 2/16/2019</em>
+        This will be something nifty pretty soon, one hopes&#8230;so stay a while and listen.
     </p>
 </body>
 </html>
