Playing around with debug run modes in the project.json file.

--- a/src/JakobHendrixCore/JakobHendrixCore/Views/Home/Index.cshtml
+++ b/src/JakobHendrixCore/JakobHendrixCore/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to my home on the web.</h1>
+    <h1>Welcome to my home on the web!</h1>
     <p>
         This will be something nifty pretty soon, one hopes&#8230;so stay a while and listen.
     </p>
